--- a/index.html
+++ b/index.html
@@ -6,110 +6,166 @@
 <title>Menu Resep</title>
 
 <style>
-*{ box-sizing:border-box }
+/* ================= FONT ================= */
+@font-face{
+  font-family:"More Sugar";
+  src:url("fonts/MoreSugar.ttf");
+}
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&display=swap');
 
-body{
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#f4f4f4;
+*{
+  box-sizing:border-box;
+  font-family:"More Sugar","Baloo 2",cursive;
 }
 
-/* HEADER */
+/* ================= THEME ================= */
+:root{
+  --merah:#d62828;
+  --kuning:#ffd60a;
+}
+
+/* ================= BODY ================= */
+body{
+  margin:0;
+  background:var(--merah);
+  color:var(--merah);
+}
+
+/* ================= HEADER ================= */
 .header{
-  background:#2ecc71;
-  color:white;
-  padding:18px;
+  background:var(--merah);
+  color:var(--kuning);
+  padding:20px;
   text-align:center;
-  font-size:20px;
+  font-size:22px;
   font-weight:bold;
 }
 
-/* SEARCH */
+/* ================= SEARCH ================= */
 .search-box{ padding:12px }
+
 .search-box input{
   width:100%;
-  padding:10px;
-  border-radius:10px;
-  border:1px solid #ddd;
+  padding:12px;
+  border:none;
+  border-radius:14px;
+  background:var(--kuning);
+  color:var(--merah);
+  font-weight:bold;
 }
 
-/* KATEGORI */
+/* ================= KATEGORI ================= */
 .kategori{
   display:flex;
   gap:8px;
   overflow:auto;
-  padding:8px 12px;
+  padding:10px 12px;
 }
-.kategori button{
-  background:#2ecc71;
-  color:white;
-  border:none;
-  padding:6px 12px;
-  border-radius:20px;
-  font-size:12px;
-}
-.kategori button.inactive{ background:#ccc }
 
-/* LIST */
+.kategori button{
+  background:var(--merah);
+  color:var(--kuning);
+  border:none;
+  padding:8px 14px;
+  border-radius:20px;
+  cursor:pointer;
+  transition:.15s;
+}
+
+.kategori button.inactive{
+  opacity:.4;
+}
+
+/* ================= LIST ================= */
 .container{ padding:12px }
 
+/* ================= CARD ================= */
 .card{
-  background:white;
-  border-radius:12px;
-  padding:14px;
-  margin-bottom:10px;
+  background:var(--kuning);
+  border-radius:16px;
+  padding:16px;
+  margin-bottom:12px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-  cursor:pointer;
-}
-.card button{
-  background:#2ecc71;
-  color:white;
-  border:none;
-  padding:6px 12px;
-  border-radius:8px;
+  font-weight:bold;
+  box-shadow:0 5px 10px rgba(0,0,0,.2);
+  transition:.15s;
 }
 
-/* PAGINATION */
+.card:hover{
+  transform:scale(1.03);
+}
+
+/* ================= BUTTON ================= */
+button{
+  background:var(--merah);
+  color:var(--kuning);
+  border:none;
+  padding:8px 14px;
+  border-radius:10px;
+  font-weight:bold;
+  cursor:pointer;
+  transition:transform .08s ease;
+}
+
+/* 🔥 animasi tekan */
+button:active{
+  transform:scale(0.88);
+}
+
+/* ================= PAGINATION ================= */
 .pagination{
   display:flex;
   justify-content:center;
-  gap:6px;
-  margin:12px 0;
-}
-.pagination button{
-  background:#2ecc71;
-  color:white;
-  border:none;
-  padding:6px 10px;
-  border-radius:6px;
-}
-.pagination button.active{
-  background:#27ae60;
+  gap:8px;
+  margin:18px 0;
 }
 
-/* INFO */
-.info{
-  background:white;
+.pagination button{
+  min-width:40px;
+  height:40px;
   border-radius:12px;
-  padding:14px;
-  margin:16px 12px 20px;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
+  background:var(--kuning);
+  color:var(--merah);
+  font-weight:bold;
+  font-size:15px;
+  box-shadow:0 4px 8px rgba(0,0,0,.25);
+  transition:transform .08s ease;
+}
+
+.pagination button:active{
+  transform:scale(0.85);
+}
+
+/* halaman aktif */
+.pagination button.active{
+  background:var(--merah);
+  color:var(--kuning);
+}
+
+/* ================= INFO ================= */
+.info{
+  background:var(--kuning);
+  border-radius:16px;
+  padding:16px;
+  margin:16px 12px 24px;
+  color:var(--merah);
   font-size:13px;
 }
 
+/* ================= LOADING ================= */
 .loading{
   text-align:center;
   padding:20px;
-  color:#888;
+  color:var(--kuning);
 }
 </style>
 </head>
+
 <body>
 
-<div class="header">📖 Menu Resep</div>
+<div class="header">📖 MENU RESEP</div>
 
 <div class="search-box">
   <input type="text" id="search" placeholder="Cari resep...">
@@ -122,13 +178,13 @@ body{
 <div class="pagination" id="pagination"></div>
 
 <div class="info">
-<b>ℹ️ Informasi</b><br>
+<b>Informasi</b><br>
 • Maks 10 resep per halaman<br>
 • Gunakan kategori & pencarian<br>
-• Tambah resep cukup edit file resep-data.js
+• Tambah resep lewat resep-data.js
 </div>
 
-<!-- 🔥 LOAD FILE JSON DULU -->
+<!-- ========= DATA FILE ========= -->
 <script src="resep-data.js"></script>
 
 <script>
@@ -142,7 +198,7 @@ let halaman=1;
 const perPage=10;
 let timer;
 
-/* ==== parsing data dari file eksternal ==== */
+/* ===== parsing data ===== */
 let data=[];
 for(const nama in daftarResep){
   const [path,kategori]=daftarResep[nama].split("|");
@@ -153,7 +209,7 @@ for(const nama in daftarResep){
   });
 }
 
-/* ==== kategori ==== */
+/* ===== kategori ===== */
 const semuaKategori=new Set(["Semua"]);
 data.forEach(r=>r.kategori.forEach(k=>semuaKategori.add(k)));
 
@@ -170,7 +226,7 @@ semuaKategori.forEach(k=>{
   kategoriBar.appendChild(btn);
 });
 
-/* ==== render ==== */
+/* ===== render ===== */
 function render(keyword=""){
   list.innerHTML="";
   pagination.innerHTML="";
@@ -197,9 +253,11 @@ function render(keyword=""){
     list.appendChild(card);
   });
 
+  /* ===== pagination ===== */
   if(totalPage>1){
+
     const prev=document.createElement("button");
-    prev.innerText="<";
+    prev.innerText="«";
     prev.onclick=()=>{if(halaman>1){halaman--;render(keyword)}};
     pagination.appendChild(prev);
 
@@ -212,17 +270,17 @@ function render(keyword=""){
     }
 
     const next=document.createElement("button");
-    next.innerText=">";
+    next.innerText="»";
     next.onclick=()=>{if(halaman<totalPage){halaman++;render(keyword)}};
     pagination.appendChild(next);
   }
 }
 
-/* ==== search ==== */
+/* ===== search ===== */
 search.oninput=function(){
   clearTimeout(timer);
-  list.innerHTML="<div class='loading'>⏳ Mencari resep...</div>";
-  timer=setTimeout(()=>{halaman=1;render(search.value)},1000);
+  list.innerHTML="<div class='loading'>⏳ Mencari...</div>";
+  timer=setTimeout(()=>{halaman=1;render(search.value)},3000);
 };
 
 render();
