Update script source path for resep-data.js

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ button:active{
 </div>
 
 <!-- ========= DATA FILE ========= -->
-<script src="resep-data.js"></script>
+<script src="/data/resep-data.js"></script>
 
 <script>
 const list=document.getElementById("listResep");
